<resources>
    <string name="app_name">RecoShop</string>
    <string name="welcom_to_recoshop">Welcom to RecoShop!</string>
    <string name="sign_in">Sign in</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="categories">Categories</string>
    <string name="welcome">Welcome</string>
    <string name="saved">Saved</string>
    <string name="company">Company:</string>
    <string name="category">Category:</string>
    <string name="manufacturer_s_image">Manufacturer\'s Image:</string>
    <string name="add_a_product">Add a product:</string>
    <string name="choose_image">Choose Image</string>
    <string name="add_a_recommendation">Add a Recommendation</string>
    <string name="product_s_image">Product\'s image</string>
    <string name="save">Save</string>
    <string name="add_a_new_reco_for">Add a new reco for</string>
    <string name="go_shopping">Go Shopping</string>
    <string name="title">Title:</string>
    <string name="where_did_you_buy_it">Where did you buy it?</string>
    <string name="description">Description:</string>
    <string name="save_reco">Save Reco</string>
    <string name="reco">Reco</string>
    <string name="product_name">Product Name</string>
    <string name="add_like">Add Like</string>
    <string name="save_product">Save Product</string>
</resources>
