<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="reco.recoshop.Activities.Register"
    android:orientation="vertical">

    <TextView
        android:id="@+id/register_tvEmail"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingTop="75dp"
        android:text="@string/email" />

    <EditText
        android:id="@+id/register_etEmail"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:inputType="text|textEmailAddress"
        android:maxLines="1" />

    <TextView
        android:id="@+id/register_tvName"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingTop="10dp"
        android:text="@string/name" />

    <EditText
        android:id="@+id/register_etName"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:inputType="text|textPersonName"
        android:maxLines="1" />


    <TextView
        android:id="@+id/register_tvPassword"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingTop="10dp"
        android:text="@string/password" />

    <EditText
        android:id="@+id/register_etPassword"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:inputType="text|textPassword"
        android:maxLines="1" />



    <Button
        android:id="@+id/register_bRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:onClick="register"
        android:text="@string/register"
        android:enabled="false"/>




</LinearLayout>
