<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="reco.recoshop.Activities.UserMenu"
    android:orientation="vertical">

    <TextView
        android:paddingTop="30dp"
        android:paddingLeft="20dp"
        android:id="@+id/um_tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textColor="@color/colorBlack"/>
    <SearchView
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ></SearchView>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">


    <Button
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:id="@+id/um_bCategories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/categories"
        android:onClick="categoriesClick"
        />
    <Button
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:id="@+id/um_bSaved"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saved"
        />
</LinearLayout>


</LinearLayout>
